--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -18,7 +18,7 @@ $color_mountain_mist_approx: #999999;
 $font_0: Source Sans Pro;
 $font_1: sans-serif;
 
-$url_0: url(../public/images/slide-bg.png);
+$url_0: url(/images/slide-bg.png);
 
 %extend_1 {
 	color: $color_mountain_mist_approx;
@@ -98,7 +98,7 @@ nav {
 .carousel {
     height: 500px;
     margin-bottom: 60px;
-    background: url(../public/images/slide-bg.png) no-repeat bottom center;
+    background: url(/images/slide-bg.png) no-repeat bottom center;
 
     .item {
         height: 500px;
